p2/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-testes
  #namespace: kube-system
  labels:
    app: nginx-testes  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-testes
  template:
    metadata:
      labels:
        app: nginx-testes
    spec:
      containers:
      - name: nginx-testes
        image: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-testes-svc
  #namespace: kube-system  
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: nginx-testes

---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-testes-ing
  #namespace: kube-system
  annotations:
    kubernetes.io/ingress.ClassName: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-testes-svc
            port:
              number: 80
